k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skillio-ingress
  namespace: skillio-prod
spec:
  rules:
    - host: skillio.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: skillio-backend-svc
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skillio-frontend-svc
                port:
                  name: http
